--- a/deploy/roles/full-app/tasks/traefik.yml
+++ b/deploy/roles/full-app/tasks/traefik.yml
@@ -1,3 +1,5 @@
 - import_tasks: deploy_configs.yml
-- import_tasks: rolling_deploy.yml
-- import_tasks: deploy_traefik.yml
+- import_tasks: read_current_deploy.yml
+- import_tasks: deploy_standalone.yml
+- import_tasks: update_traefik.yml
+- import_tasks: delete_old_deploy.yml
