--- a/deploy/roles/full-app/tasks/ports_discovery.yml
+++ b/deploy/roles/full-app/tasks/ports_discovery.yml
@@ -1,9 +1,18 @@
 - name: Set ports to 0
   set_fact:
     dango_port: 0
+    dango_metrics_port: 0
     faucet_port: 0
     dango_frontend_port: 0
     dango_metrics_port: 0
+
+- name: Generate .env with the 0 ports
+  become: true
+  become_user: root
+  template:
+    src: env.j2
+    dest: "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}/.env"
+    owner: "{{ deploy_user }}"
 
 - name: Deploy dango stack first to get binded ports
   community.docker.docker_compose_v2:
