--- a/deploy/roles/full-app/tasks/traefik.yml
+++ b/deploy/roles/full-app/tasks/traefik.yml
@@ -3,3 +3,4 @@
 - import_tasks: deploy_standalone.yml
 - import_tasks: update_traefik.yml
 - import_tasks: delete_old_deploy.yml
+  when: current_deployment is defined
