--- a/deploy/roles/full-app/tasks/setup.yml
+++ b/deploy/roles/full-app/tasks/setup.yml
@@ -6,6 +6,7 @@
     - dango_frontend_port
     - dango_metrics_port
     - faucet_port
+    - quest_port
     - cometbft_p2p_port
     - cometbft_rpc_port
     - cometbft_abci_port
