--- a/deploy/roles/traefik/templates/docker-compose.yml
+++ b/deploy/roles/traefik/templates/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       - "{{ tailscale_ip }}:8888:8888"
       # devnet
       - "8080:8080"
-      - "9191:9191"
       - "8081:8081"
       - "8082:8082"
+      - "{{ tailscale_ip }}:9191:9191"
       - "26656:26656"
       - "{{ tailscale_ip }}:26657:26657"
       - "{{ tailscale_ip }}:26658:26658"
