--- a/deploy/roles/full-app/tasks/github_deployments.yml
+++ b/deploy/roles/full-app/tasks/github_deployments.yml
@@ -55,12 +55,12 @@
     | **Status** | ✅ |
     | **Dango Frontend** | [http://{{ tailscale_ip }}:{{ dango_frontend_port }}](http://{{ tailscale_ip }}:{{ dango_frontend_port }}) |
     | **Dango GraphQL** | [http://{{ tailscale_ip }}:{{ dango_port }}/graphql](http://{{ tailscale_ip }}:{{ dango_port }}/graphql) |
-    | **Dango metrics** | [http://{{ tailscale_ip }}:{{ dango_metrics_port }}/graphql](http://{{ tailscale_ip }}:{{ dango_metrics_port }}) |
+    | **Dango metrics** | [http://{{ tailscale_ip }}:{{ dango_metrics_port }}/metrics](http://{{ tailscale_ip }}:{{ dango_metrics_port }}/metrics) |
     | **Faucet bot** | [http://{{ tailscale_ip }}:{{ faucet_port }}](http://{{ tailscale_ip }}:{{ faucet_port }}) |
     | **CometBFT P2P** | [http://{{ tailscale_ip }}:{{ cometbft_p2p_port }}](http://{{ tailscale_ip }}:{{ cometbft_p2p_port }}) |
     | **CometBFT RPC** | [http://{{ tailscale_ip }}:{{ cometbft_rpc_port }}](http://{{ tailscale_ip }}:{{ cometbft_rpc_port }}) |
     | **CometBFT ABCI** | [http://{{ tailscale_ip }}:{{ cometbft_abci_port }}](http://{{ tailscale_ip }}:{{ cometbft_abci_port }}) |
-    | **CometBFT Metrics** | [http://{{ tailscale_ip }}:{{ cometbft_metrics_port }}](http://{{ tailscale_ip }}:{{ cometbft_metrics_port }}) |
+    | **CometBFT Metrics** | [http://{{ tailscale_ip }}:{{ cometbft_metrics_port }}/metrics](http://{{ tailscale_ip }}:{{ cometbft_metrics_port }}/metrics) |
     | **Deployment name** | `{{ deployment_name }}` |
     | **Commit** | `{{ github_sha }}` |
     EOF
