--- a/.github/workflows/cometbft.yaml
+++ b/.github/workflows/cometbft.yaml
@@ -8,6 +8,7 @@ env:
   COMETBFT_GIT_TAG: v0.38.17
 
 on:
+  workflow_dispatch:
   push:
     branches: [main]
     paths:
@@ -42,7 +43,7 @@ jobs:
 
   build-cometbft:
     needs: check-image
-    if: needs.check-image.outputs.skip_build == 'false'
+    if: needs.check-image.outputs.skip_build == 'false' || github.event_name == 'workflow_dispatch'
     permissions:
       packages: write
     runs-on: self-hosted
