--- a/deploy/roles/full-app/templates/devnet/config/dango/app.toml
+++ b/deploy/roles/full-app/templates/devnet/config/dango/app.toml
@@ -91,10 +91,10 @@ port = 9191
 [tendermint]
 
 # Tendermint RPC listening address.
-rpc_addr = "http://{{ cometbft_host }}:{{ cometbft_rpc_port }}"
+rpc_addr = "http://{{ cometbft_host }}:26657"
 
 # Tendermint ABCI listening address.
-abci_addr = "0.0.0.0:{{ cometbft_abci_port }}"
+abci_addr = "0.0.0.0:26658"
 
 ################################################################################
 ###                        Transaction Configuration                         ###
