--- a/.github/workflows/cleanup-pr.yaml
+++ b/.github/workflows/cleanup-pr.yaml
@@ -1,3 +1,5 @@
+name: Cleanup PR
+
 on:
   pull_request:
     types: [closed]
@@ -50,6 +52,12 @@ jobs:
             "https://api.github.com/orgs/left-curve/packages/container/left-curve%2Fdango/versions" \
             -d '{"names":["pr-${{ github.event.pull_request.number }}-latest"]}'
 
+          curl -X DELETE \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/orgs/left-curve/packages/container/left-curve%2Fdango-frontend/versions" \
+            -d '{"names":["pr-${{ github.event.pull_request.number }}-latest"]}'
+
           # Delete commit-specific images for this PR
           for commit in $PR_COMMITS; do
             echo "Deleting image for commit: $commit"
@@ -58,8 +66,24 @@ jobs:
               -H "Accept: application/vnd.github.v3+json" \
               "https://api.github.com/orgs/left-curve/packages/container/left-curve%2Fdango/versions" \
               -d "{\"names\":[\"$commit\", \"$commit-amd64\", \"$commit-arm64\"]}"
+            curl -X DELETE \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github.v3+json" \
+              "https://api.github.com/orgs/left-curve/packages/container/left-curve%2Fdango-frontend/versions" \
+              -d "{\"names\":[\"$commit\", \"$commit-amd64\", \"$commit-arm64\"]}"
           done
+
+      - name: Install Ansible
+        run: |
+          pipx install ansible
+          pipx ensurepath
+          ln -f -s ~/.local/pipx/venvs/ansible/bin/ansible-galaxy ~/.local/bin/ansible-galaxy
+          ln -sf ~/.local/pipx/venvs/ansible/bin/ansible-playbook ~/.local/bin/ansible-playbook
+          cd deploy
+          ansible-galaxy collection install -r requirements.yml
 
       - name: Cleanup actual containers
         run: |
+          cd deploy
+          pipx ensurepath
           ansible-playbook delete-full-app.yml -e deployment_name=pr-${{ github.event.pull_request.number }}
