--- a/deploy/full-app.yml
+++ b/deploy/full-app.yml
@@ -9,7 +9,7 @@
     ghcr_user: "{{ lookup('env','GITHUB_USER') }}"
     ghcr_token: "{{ lookup('env','GITHUB_TOKEN') }}"
     timestamp: "{{ ansible_date_time.year }}{{ ansible_date_time.month }}{{ ansible_date_time.day }}{{ ansible_date_time.hour }}{{ ansible_date_time.minute }}{{ ansible_date_time.second }}"
-    deployment_name: "{% if pr_name is defined and pr_name != '' %}{{ pr_name }}-{% endif %}{{ timestamp }}"
+    deployment_name: "{{ timestamp }}"
     COMETBFT_NODE_KEY: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_NODE_KEY') }}"
     COMETBFT_VALIDATOR_ADDRESS: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_VALIDATOR_ADDRESS') }}"
     COMETBFT_VALIDATOR_PUB_KEY: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_VALIDATOR_PUB_KEY') }}"
@@ -19,15 +19,9 @@
     deploy_env: "staging"
     chain_id: "dev-9"
     dango_network: "devnet"
-    dango_port: 0
-    quest_port: 0
-    faucet_port: 0
-    dango_frontend_port: 0
-    cometbft_p2p_port: 26656
-    cometbft_rpc_port: 26657
-    cometbft_metrics_port: 26660
-    cometbft_abci_port: 26658
+    # When traefik is enabled it will be used for routing, keeping the same port
     traefik_enabled: false
+    expose_ports: false
   collections:
     - community.docker
     - community.clickhouse
