--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -385,13 +385,13 @@ jobs:
           echo "# 🐳 Docker Multi-arch Manifest" >> $GITHUB_STEP_SUMMARY
           echo "| Name | Result |" >> $GITHUB_STEP_SUMMARY
           echo "| ---- | ------ |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Commit:** | \`${{ env.GIT_COMMIT }}\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Status:** | ✅ Manifest pushed! |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Image URL:** | [ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}](https://github.com/left-curve/left-curve/pkgs/container/dango) |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Commit** | \`${{ env.GIT_COMMIT }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Status** | ✅ |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Image URL** | [ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}](https://github.com/left-curve/left-curve/pkgs/container/left-curve%2Fdango) |" >> $GITHUB_STEP_SUMMARY
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "| **Latest tag:** | [ghcr.io/left-curve/left-curve/dango:latest](https://github.com/left-curve/left-curve/pkgs/container/dango) |" >> $GITHUB_STEP_SUMMARY
+            echo "| **Latest tag:** | [ghcr.io/left-curve/left-curve/dango:latest](https://github.com/left-curve/left-curve/pkgs/container/left-curve%2Fdango) |" >> $GITHUB_STEP_SUMMARY
           fi
-          echo "| **Architectures:** | amd64, arm64 |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Architectures** | amd64, arm64 |" >> $GITHUB_STEP_SUMMARY
 
   frontend-build:
     needs: [backend-test]
@@ -484,18 +484,25 @@ jobs:
             docker manifest push --purge ghcr.io/left-curve/left-curve/dango-frontend:latest
           fi
 
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            docker manifest create ghcr.io/left-curve/left-curve/dango-frontend:pr-${{ github.event.pull_request.number }}-latest\
+              --amend ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}-amd64 \
+              --amend ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}-arm64
+
+            docker manifest push --purge ghcr.io/left-curve/left-curve/dango-frontend:pr-${{ github.event.pull_request.number }}-latest
+          fi
       - name: Frontend Docker Deploy Summary
         run: |
           echo "# 🎨 Frontend Docker Multi-arch Manifest" >> $GITHUB_STEP_SUMMARY
           echo "| Name | Result |" >> $GITHUB_STEP_SUMMARY
           echo "| ---- | ------ |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Commit:** | \`${{ env.GIT_COMMIT }}\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Status:** | ✅ Frontend manifest pushed! |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Image URL:** | [ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}](https://github.com/left-curve/left-curve/pkgs/container/dango-frontend) |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Commit** | \`${{ env.GIT_COMMIT }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Status** | ✅ |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Image URL** | [ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}](https://github.com/left-curve/left-curve/pkgs/container/left-curve%2Fdango-frontend) |" >> $GITHUB_STEP_SUMMARY
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "| **Latest tag:** | [ghcr.io/left-curve/left-curve/dango-frontend:latest](https://github.com/left-curve/left-curve/pkgs/container/dango-frontend) |" >> $GITHUB_STEP_SUMMARY
+            echo "| **Latest tag:** | [ghcr.io/left-curve/left-curve/dango-frontend:latest](https://github.com/left-curve/left-curve/pkgs/container/left-curve%2Fdango-frontend) |" >> $GITHUB_STEP_SUMMARY
           fi
-          echo "| **Architectures:** | amd64, arm64 |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Architectures** | amd64, arm64 |" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     permissions:
@@ -562,7 +569,7 @@ jobs:
           if [ "${{ github.event_name }}" == "pull_request" ]; then
             cd deploy
             pipx ensurepath
-            ansible-playbook full-app.yml -e deployment_name=pr-${{ github.event.pull_request.number }} -e github_pr_number=${{ github.event.pull_request.number }} -e github_sha=${{ github.event.pull_request.head.sha }}
+            ansible-playbook full-app.yml -e deployment_name=pr-${{ github.event.pull_request.number }} -e github_pr_number=${{ github.event.pull_request.number }} -e github_sha=${{ github.event.pull_request.head.sha }} -e expose_ports=true
           fi
 
   localdango:
