--- a/deploy/roles/full-app/templates/docker-compose.yml
+++ b/deploy/roles/full-app/templates/docker-compose.yml
@@ -56,11 +56,14 @@ services:
         condition: service_healthy
       clickhouse:
         condition: service_healthy
+{% if expose_ports %}
     ports:
       - "{{ tailscale_ip }}:${DANGO_PORT:-0}:8080"
+      - "{{ tailscale_ip }}:${DANGO_METRICS_PORT:-0}:9191"
+{% endif %}
     networks:
       - default
-      - traefik-net
+      - traefik
     volumes:
       - "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}/configs/dango:/root/.dango/config"
     environment:
@@ -82,11 +85,13 @@ services:
     depends_on:
       dango:
         condition: service_healthy
+{% if expose_ports %}
     ports:
       - "{{ tailscale_ip }}:${DANGO_FRONTEND_PORT:-0}:80"
+{% endif %}
     networks:
       - default
-      - traefik-net
+      - traefik
     environment:
       INDEXER_URL: ${INDEXER_URL}
       FAUCET_URL: ${FAUCET_URL}
@@ -106,11 +111,13 @@ services:
     depends_on:
       dango:
         condition: service_healthy
+{% if expose_ports %}
     ports:
       - "{{ tailscale_ip }}:${FAUCET_PORT:-0}:8082"
+{% endif %}
     networks:
       - default
-      - traefik-net
+      - traefik
     environment:
       - HOME=/app
     tty: true
@@ -129,9 +136,16 @@ services:
       - dango
     volumes:
       - "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}/configs/cometbft:/root/.cometbft/config"
+{% if expose_ports %}
+    ports:
+      - "{{ tailscale_ip }}:${COMETBFT_P2P_PORT:-0}:26656"
+      - "{{ tailscale_ip }}:${COMETBFT_RPC_PORT:-0}:26657"
+      - "{{ tailscale_ip }}:${COMETBFT_ABCI_PORT:-0}:26658"
+      - "{{ tailscale_ip }}:${COMETBFT_METRICS_PORT:-0}:26660"
+{% endif %}
     networks:
       - default
-      - traefik-net
+      - traefik
     tty: true
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:{{ cometbft_rpc_port }}/health"]
@@ -147,5 +161,5 @@ services:
       "
 
 networks:
-  traefik-net:
-    driver: bridge
+  traefik:
+    external: true
