--- a/deploy/roles/traefik/templates/docker-compose.yml
+++ b/deploy/roles/traefik/templates/docker-compose.yml
@@ -6,11 +6,13 @@ services:
       - "{{ tailscale_ip }}:8888:8888"
       # devnet
       - "8080:8080"
-      - "9191:9191"
       - "8081:8081"
       - "8082:8082"
+      - "{{ tailscale_ip }}:9191:9191"
       - "26656:26656"
-      # - "{{ tailscale_ip }}:26657:26657"
+      - "{{ tailscale_ip }}:26657:26657"
+      - "{{ tailscale_ip }}:26658:26658"
+      - "{{ tailscale_ip }}:26660:26660"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - "{{ traefik_dir }}/config:/config:ro"
@@ -20,9 +22,10 @@ services:
     #   - "traefik.http.routers.dashboard.entrypoints=dashboard"
     #   - "traefik.http.routers.dashboard.service=api@internal"
     networks:
-      - traefik-net
+      - traefik
       - monitoring
     command:
+      - --providers.docker.exposedbydefault=false
       - --api.dashboard=true
       - --api.insecure=true
       # - --entrypoints.web=false
@@ -37,7 +40,9 @@ services:
       - --entrypoints.devnet-frontend.address=:8081
       - --entrypoints.devnet-faucet_bot.address=:8082
       - --entrypoints.devnet-cometbft_p2p.address=:26656
-      # - --entrypoints.devnet-cometbft.address=:26657
+      - --entrypoints.devnet-cometbft_rpc.address=:26657
+      - --entrypoints.devnet-cometbft_abci.address=:26658
+      - --entrypoints.devnet-cometbft_metrics.address=:26660
       # Metrics
       - --metrics.prometheus=true
       # Tracing
@@ -55,7 +60,8 @@ services:
       start_period: 5s
 
 networks:
-  traefik-net:
+  traefik:
     driver: bridge
+    name: traefik
   monitoring:
     external: true
