--- a/deploy/roles/full-app/tasks/github_main_deployments.yml
+++ b/deploy/roles/full-app/tasks/github_main_deployments.yml
@@ -1,3 +1,22 @@
+- name: Create environments
+  uri:
+    url: "https://api.github.com/repos/left-curve/left-curve/environments/{{ item }}"
+    method: PUT
+    headers:
+      Authorization: "token {{ ghcr_token }}"
+      Accept: "application/vnd.github.v3+json"
+    body_format: json
+    body:
+      wait_timer: 0
+      reviewers: []
+      deployment_branch_policy: null
+    status_code: [200, 201]
+    failed_when: false
+  loop:
+    - "dango-frontend"
+    - "dango-api"
+    - "faucet-bot"
+
 - name: Create GitHub deployments
   uri:
     url: "https://api.github.com/repos/left-curve/left-curve/deployments"
@@ -8,8 +27,8 @@
     body_format: json
     body:
       ref: "{{ github_sha }}"
-      environment: "pr-{{ github_pr_number }}-{{ item.name }}"
-      description: "{{ item.description }} for PR {{ github_pr_number }}"
+      environment: "{{ item.name }}"
+      description: "{{ item.description }}"
       auto_merge: false
       required_contexts: []
     status_code: [200, 201]
@@ -17,12 +36,7 @@
   loop:
     - { name: "dango-frontend", description: "Frontend", url: "http://{{ tailscale_ip }}:{{ dango_frontend_port }}" }
     - { name: "dango-api", description: "Dango API", url: "http://{{ tailscale_ip }}:{{ dango_port }}" }
-    - { name: "dango-metrics", description: "Dango Metrics", url: "http://{{ tailscale_ip }}:{{ dango_metrics_port }}" }
     - { name: "faucet-bot", description: "Faucet", url: "http://{{ tailscale_ip }}:{{ faucet_port }}" }
-    - { name: "cometbft-p2p", description: "CometBFT P2P", url: "http://{{ tailscale_ip }}:{{ cometbft_p2p_port }}" }
-    - { name: "cometbft-rpc", description: "CometBFT RPC", url: "http://{{ tailscale_ip }}:{{ cometbft_rpc_port }}" }
-    - { name: "cometbft-abci", description: "CometBFT ABCI", url: "http://{{ tailscale_ip }}:{{ cometbft_abci_port }}" }
-    - { name: "cometbft-metrics", description: "CometBFT metrics", url: "http://{{ tailscale_ip }}:{{ cometbft_metrics_port }}" }
 
 - name: Set deployment statuses
   uri:
@@ -55,12 +69,7 @@
     | **Status** | ✅ |
     | **Dango Frontend** | [http://{{ tailscale_ip }}:{{ dango_frontend_port }}](http://{{ tailscale_ip }}:{{ dango_frontend_port }}) |
     | **Dango GraphQL** | [http://{{ tailscale_ip }}:{{ dango_port }}/graphql](http://{{ tailscale_ip }}:{{ dango_port }}/graphql) |
-    | **Dango metrics** | [http://{{ tailscale_ip }}:{{ dango_metrics_port }}/metrics](http://{{ tailscale_ip }}:{{ dango_metrics_port }}/metrics) |
     | **Faucet bot** | [http://{{ tailscale_ip }}:{{ faucet_port }}](http://{{ tailscale_ip }}:{{ faucet_port }}) |
-    | **CometBFT P2P** | [http://{{ tailscale_ip }}:{{ cometbft_p2p_port }}](http://{{ tailscale_ip }}:{{ cometbft_p2p_port }}) |
-    | **CometBFT RPC** | [http://{{ tailscale_ip }}:{{ cometbft_rpc_port }}](http://{{ tailscale_ip }}:{{ cometbft_rpc_port }}) |
-    | **CometBFT ABCI** | [http://{{ tailscale_ip }}:{{ cometbft_abci_port }}](http://{{ tailscale_ip }}:{{ cometbft_abci_port }}) |
-    | **CometBFT Metrics** | [http://{{ tailscale_ip }}:{{ cometbft_metrics_port }}/metrics](http://{{ tailscale_ip }}:{{ cometbft_metrics_port }}/metrics) |
     | **Deployment name** | `{{ deployment_name }}` |
     | **Commit** | `{{ github_sha }}` |
     EOF
